# entropy-data-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  release
.github/workflows/: ci.yaml  release.yaml
src/entropy_data/: __init__.py  __main__.py  cli.py  client.py  util.py
src/entropy_data/commands/: access.py  api_keys.py  assets.py  certifications.py  connection.py  costs.py  datacontracts.py  dataproducts.py  definitions.py  events.py  example_data.py  import_export.py  lineage.py  search.py  settings.py  sourcesystems.py  tags.py  teams.py  test_results.py  usage.py
src/entropy_data_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py  util.py
src/entropy_data_cli/commands/: access.py  api_keys.py  assets.py  certifications.py  connection.py  costs.py  datacontracts.py  dataproducts.py  definitions.py  events.py  example_data.py  import_export.py  lineage.py  search.py  settings.py  sourcesystems.py  tags.py  teams.py  test_results.py  usage.py
tests/: conftest.py  test_client.py  test_config.py
tests/commands/: test_api_keys.py  test_assets.py  test_connection.py  test_costs.py  test_lineage.py  test_settings.py  test_tags.py  test_teams.py  test_usage.py
